# BILBILAK-OS

./: CMakeLists.txt  LICENSE  README.md  build_all.sh  build_and_run.sh  toolchain.cmake
common/: CMakeLists.txt  uart.hpp
kernel/: CMakeLists.txt  boot.S  linker.ld  main.cpp
